# reproflop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml  cmake.yml
cmake/: config.h.in
results/: RNG_Example_cpu.txt  RNG_Example_gpu.txt  RNG_Example_gpu_lacc.txt  kmeans_cpu.txt  kmeans_gpu_base.txt  kmeans_gpu_rep.txt  mri-gridding_cpu.txt  mri-gridding_gpu_base.txt  spmv_cpu.txt  spmv_gpu.txt
src/: CMakeLists.txt
src/LongAccumulator/: LongAccumulator.cpp  LongAccumulator.h
src/RNGExample/Base/: RNGExample.cpp
src/RNGExample/StrongReproducibility/: Makefile  RNGExample.cpp
src/RNGExample/WeakReproducibility/: RNGExample.cpp
src/cpu/: CMakeLists.txt
src/cpu/LongAccumulator/: CMakeLists.txt  Makefile  test
src/cpu/RNGExample/Base/: Makefile  RNGExample
src/cpu/RNGExample/StrongReproducibility/: Makefile  RNGExample
src/cpu/RNGExample/WeakReproducibility/: RNGExample
src/cpu/ReproFLOP/: CMakeLists.txt  LongAccumulator.cpp  LongAccumulator.h
src/cpu/examples/: CMakeLists.txt
src/cpu/examples/RNGExample/: CMakeLists.txt
src/cpu/examples/RNGExample/Base/: CMakeLists.txt  RNGExample.cpp
src/cpu/examples/RNGExample/StrongReproducibility/: CMakeLists.txt  RNGExample.cpp
src/cpu/examples/RNGExample/WeakReproducibility/: CMakeLists.txt
src/cpu/examples/kmeans (Rodinia)/: CMakeLists.txt
src/cpu/examples/kmeans (Rodinia)/Base_WeakReproducibility/: CMakeLists.txt  kmeans.cpp
src/cpu/examples/kmeans (Rodinia)/StrongReproducibility/: CMakeLists.txt  cluster.cpp  kmeans.cpp
src/cpu/examples/mri-gridding (Parboil)/: CMakeLists.txt  run
src/cpu/examples/mri-gridding (Parboil)/Base_WeakReproducibility/: CMakeLists.txt  UDTypes.h
src/cpu/examples/mri-gridding (Parboil)/StrongReproducibility/: CMakeLists.txt  CPU_kernels.cpp  Makefile  main.cpp
src/cpu/examples/spmv (Parboil)/: CMakeLists.txt  run
src/cpu/examples/spmv (Parboil)/Base/: CMakeLists.txt  file.h  main.cpp  mmio.h  parboil.cpp  parboil.h
src/cpu/examples/spmv (Parboil)/StrongReproducibility/: CMakeLists.txt  file.cpp  main.cpp  parboil.cpp
src/cpu/kmeans (Rodinia)/Base_WeakReproducibility/: Makefile  kmeans  kmeans.h
src/cpu/kmeans (Rodinia)/StrongReproducibility/: Makefile  kmeans  kmeans_clustering.cpp
src/gpu/: CMakeLists.txt
src/gpu/LongAccumulator/: LongAccumulator.h  test.cpp
src/gpu/ReproFLOP/: CMakeLists.txt  LongAccumulator.cl  LongAccumulator.cpp  LongAccumulator.h  LongAccumulatorCPU.cpp  LongAccumulatorCPU.h
src/gpu/common/: common.cpp  common.h
src/gpu/examples/: CMakeLists.txt
src/gpu/examples/RNGExample/: CMakeLists.txt
src/gpu/examples/RNGExample/Base/: CMakeLists.txt  RNGExample.cpp  Sum.cl
src/gpu/examples/RNGExample/StrongReproducibility/: CMakeLists.txt  RNGExample.cpp
src/gpu/examples/kmeans (Rodinia)/: CMakeLists.txt  test.sh
src/gpu/examples/kmeans (Rodinia)/Base_WeakReproducibility/: CMakeLists.txt  cluster.cpp  kmeans.cl  kmeans.cpp  kmeans.h  kmeans_clustering.cpp  read_input.cpp
src/gpu/examples/kmeans (Rodinia)/StrongReproducibility/: CMakeLists.txt  cluster.cpp  kmeans.cpp  kmeans.h  kmeans_clustering.cpp  read_input.cpp  rmse.cpp
src/gpu/examples/kmeans (Rodinia)/data/inpuGen/: Makefile  datagen.cpp  gen_dataset.sh
src/gpu/examples/mri-gridding (Parboil)/: CMakeLists.txt  DESCRIPTION  run  test.sh
src/gpu/examples/mri-gridding (Parboil)/Base_WeakReproducibility/: CMakeLists.txt  CPU_kernels.cpp  CPU_kernels.h  GPU_kernels.cl  OpenCL_common.cpp  OpenCL_common.h  OpenCL_interface.cpp  OpenCL_interface.h  UDTypes.h  main.cpp  parboil.h  parboil_opencl.cpp  scanLargeArray.cl  scanLargeArray.cpp  scanLargeArray.h  sort.cl  sort.cpp  sort.h
src/gpu/examples/mri-gridding (Parboil)/CPUStrongReproducibility/: CMakeLists.txt  CPU_kernels.cpp  UDTypes.h  main.cpp
src/gpu/examples/mri-gridding (Parboil)/data/small/: DESCRIPTION  small.uks
src/gpu/examples/spmv (Parboil)/: CMakeLists.txt  main.cpp  run
src/gpu/examples/spmv (Parboil)/Base/: CMakeLists.txt  file.cpp  main.cpp  parboil_opencl.cpp
src/gpu/examples/spmv (Parboil)/StrongReproducibility/: convert_dataset.h  file.h  gpu_info.h  kernel.cl  main.cpp
src/gpu/examples/spmv (Parboil)/StrongReproducibility (dot product)/: CMakeLists.txt  convert_dataset.cpp  convert_dataset.h  main.cpp
src/gpu/examples/spmv (Parboil)/StrongReproducibility (spmv)/: CMakeLists.txt  convert_dataset.cpp  main.cpp  parboil.h
src/gpu/examples/spmv (Parboil)/StrongReproducibility (sum)/: CMakeLists.txt  convert_dataset.cpp  gpu_info.cpp  mmio.cpp  ocl.cpp
src/gpu/examples/spmv (Parboil)/data/: jgl009_values.mtx
src/kmeans (Rodinia)/Base_WeakReproducibility/: Makefile  cluster.c  cluster.cpp  kmeans.c  kmeans_clustering.cpp  run
src/kmeans (Rodinia)/StrongReproducibility/: kmeans.cpp  kmeans.h  test.sh
src/kmeans (Rodinia)/kmeans_openmp/: kmeans.c
src/kmeans (Rodinia)/kmeans_serial/: kmeans  kmeans.c
src/mri-gridding (Parboil)/Base/: CPU_kernels.cpp  Makefile  main.cpp  mri-gridding
src/mri-gridding (Parboil)/Base_WeakReproducibility/: CPU_kernels.cpp  Makefile  main.cpp  test.sh
src/mri-gridding (Parboil)/StrongReproducibility/: CPU_kernels.cpp  Makefile  main.cpp
src/rng/: Makefile  rng  rng.cpp  rng_weak_reproducibility.cpp
test/: CMakeLists.txt
test/cpu/: CMakeLists.txt  TestBaseFunctionality.cpp
test/gpu/: CMakeLists.txt  TestBaseFunctionality.cpp
